--- a/force-app/main/default/classes/selectors/LoanApplicationsSelector.cls
+++ b/force-app/main/default/classes/selectors/LoanApplicationsSelector.cls
@@ -1,7 +1,8 @@
 public with sharing class LoanApplicationsSelector extends fflib_SObjectSelector {
+    public Schema.SObjectType getSObjectType() { return Loan_Application__c.SObjectType; }
     
     public List<Schema.SObjectField> getSObjectFieldList() {
-        return new List<Schema.SObjectField> {
+        return new List<Schema.SObjectField>{
             Loan_Application__c.Id,
             Loan_Application__c.Borrower__c,
             Loan_Application__c.Amount__c,
@@ -10,33 +11,11 @@ public with sharing class LoanApplicationsSelector extends fflib_SObjectSelector
             Loan_Application__c.Approval_Outcome__c
         };
     }
-    
-    public Schema.SObjectType getSObjectType() {
-        return Loan_Application__c.sObjectType;
-    }
-    
-    public List<Loan_Application__c> selectById(Set<Id> idSet) {
-        return (List<Loan_Application__c>) selectSObjectsById(idSet);
-    }
-    
-    public List<Loan_Application__c> selectByIdWithBorrower(Set<Id> idSet) {
-        fflib_QueryFactory queryFactory = newQueryFactory();
-        queryFactory.selectField('Borrower__r.Email');
-        queryFactory.selectField('Borrower__r.Annual_Income__c');
-        queryFactory.selectField('Borrower__r.Credit_Score__c');
-        queryFactory.setCondition('Id IN :idSet');
-        
-        return (List<Loan_Application__c>) Database.query(queryFactory.toSOQL());
-    }
-    
-    public List<Loan_Application__c> selectByStatus(String status) {
-        fflib_QueryFactory queryFactory = newQueryFactory();
-        queryFactory.setCondition('Status__c = :status');
-        
-        return (List<Loan_Application__c>) Database.query(queryFactory.toSOQL());
-    }
-    
-    public static LoanApplicationsSelector newInstance() {
-        return (LoanApplicationsSelector) Application.Selector.newInstance(Loan_Application__c.SObjectType);
+
+    public List<Loan_Application__c> selectByIds(Set<Id> ids) {
+        if (ids == null || ids.isEmpty()) return new List<Loan_Application__c>();
+        return (List<Loan_Application__c>) Database.query(
+            newQueryFactory().setCondition('Id IN :ids').toSOQL()
+        );
     }
 }
