--- a/force-app/main/default/classes/selectors/ProductsSelector.cls
+++ b/force-app/main/default/classes/selectors/ProductsSelector.cls
@@ -1,4 +1,5 @@
 public with sharing class ProductsSelector extends fflib_SObjectSelector {
+    
     public Schema.SObjectType getSObjectType() {
         return Product__c.SObjectType;
     }
@@ -12,24 +13,30 @@ public with sharing class ProductsSelector extends fflib_SObjectSelector {
         };
     }
 
-    // Override to enforce ascending order by Base_Rate__c, then Min_Credit_Score__c
     public override String getOrderBy() {
         return 'Base_Rate__c ASC, Min_Credit_Score__c ASC';
     }
 
-    // Story A: return all products ordered by rate (lowest first)
     public List<Product__c> selectAllOrderByRateAsc() {
-        return (List<Product__c>) Database.query(newQueryFactory().toSOQL());
+        return (List<Product__c>) Database.query(
+            newQueryFactory()
+                .assertIsAccessible()
+                .setEnforceFLS(true)
+                .toSOQL()
+        );
     }
 
-    // Story B: only return products outside safe range
     public List<Product__c> selectForRateNormalization() {
         Decimal lower = ProductRateNormalizationService.LOWER_RATE;
         Decimal upper = ProductRateNormalizationService.UPPER_RATE;
 
-        fflib_QueryFactory qf = newQueryFactory();
-        qf.setCondition('Base_Rate__c < :lower OR Base_Rate__c > :upper');
-        return (List<Product__c>) Database.query(qf.toSOQL());
+        return (List<Product__c>) Database.query(
+            newQueryFactory()
+                .assertIsAccessible()
+                .setEnforceFLS(true)
+                .setCondition('Base_Rate__c < :lower OR Base_Rate__c > :upper')
+                .toSOQL()
+        );
     }
 
     public static ProductsSelector newInstance() {
